<resources>
    <!--    Nombre App y Desarrolladores -->
    <string name="app_name">Catalogo DistriTodo Sevilla</string>
    <string name="developer">Desarrollado por: Sergio Rodriguez y Carlos Vasquez</string>

    <!--    Menu Administrador-->
    <string name="title_activity_menu">Menu</string>
    <string name="home_admin">Inicio</string>
    <string name="register_admin">Registrar Administrador</string>
    <string name="add_admin">Agregar Item</string>
    <string name="edit_admin">Editar Item</string>

    <!--    Menu Cliente-->
    <string name="opciones_txt">Opciones</string>
    <string name="home_cliente">Inicio</string>
    <string name="more_option">Más Opciones</string>
    <string name="about">Acerca de</string>

    <!--    Menu Parte Superior Derecha-->
    <string name="add_item">Agregar Item</string>
    <string name="view_item">Ver Item</string>

    <!--    Add Licores-->
    <string name="name_img_liquors">Nombre de imagen</string>
    <string name="name_text_liquors">Escriba el nombre del item</string>
    <string name="price_liquors">Escriba el precio del item</string>
    <string name="description_liquors">Escriba descripcion del item</string>

    <!--    Add Bebidas-->
    <string name="name_img_drinks">Nombre de imagen</string>
    <string name="name_text_drinks">Escriba el nombre del item</string>
    <string name="price_drinks">Escriba el precio del item</string>
    <string name="description_drinks">Escriba descripcion del item</string>

    <!--    Add Dulces-->
    <string name="name_img_candys">Nombre de imagen</string>
    <string name="name_text_candys">Escriba el nombre del item</string>
    <string name="price_candys">Escriba el precio del item</string>
    <string name="description_candys">Escriba descripcion del item</string>

    <!--    Add Otros-->
    <string name="name_img_others">Nombre de imagen</string>
    <string name="name_text_others">Escriba el nombre del item</string>
    <string name="price_others">Escriba el precio del item</string>
    <string name="description_others">Escriba descripcion del item</string>

    <!--    Item licores-->
    <string name="name_img_liquors_item">--</string>
    <string name="price_liquors_item">--</string>
    <string name="description_liquors_item">--</string>

    <!--    Item bebidas-->
    <string name="name_img_drinks_item">--</string>
    <string name="price_drinks_item">--</string>
    <string name="description_drinks_item">--</string>

    <!--    Item dulces-->
    <string name="name_img_candys_item">--</string>
    <string name="price_candys_item">--</string>
    <string name="description_candys_item">--</string>

    <!--    Item otros-->
    <string name="name_img_others_item">--</string>
    <string name="price_others_item">--</string>
    <string name="description_others_item">--</string>

    <!--    Inicio de sesion -->
    <string name="login">Inicio Sesion</string>
    <string name="exit">Cerrar Sesion</string>
    <string name="login_txt">Ingresar</string>

    <!--    Abrir y cerrar menu-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Registro de Administradores -->
    <string name="regster_txt">Registro de Administradores</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="names">Nombres</string>
    <string name="last_name">Apellidos</string>
    <string name="register_btn">Registrar</string>

    <!--    Perfil administrador-->
    <string name="profile_admin_txt">Mi Perfil</string>
    <string name="info_txt">Mi Información</string>
    <string name="UID_profile_txt">Uid: </string>
    <string name="UID_profile">--</string>
    <string name="name_profile_txt">Nombres: </string>
    <string name="name_profile">--</string>
    <string name="last_name_profile_txt">Apellidos: </string>
    <string name="last_name_profile">--</string>
    <string name="email_profile_txt">Correo: </string>
    <string name="email_profile">--</string>
    <string name="password_profile_txt">Contraseña: </string>
    <string name="password_profile">--</string>
    <string name="update_password_profile">Actualizar Password</string>
    <string name="update_data_profile">Actualizar Datos</string>

<!--    Cambio de contraseña -->
<string name="myDataProfile">Mis Credenciales</string>
    <string name="currentPassTxt">Contraseña actual: </string>
    <string name="currentPass">--</string>
    <string name="currentPassEt"> Contraseña Actual </string>
    <string name="newPassEt">Nueva contraseña</string>
    <string name="changePassBtn">Cambiar contraseña</string>
    <string name="goToHome">Ir inicio</string>
    <string name="noteTxt">Si cambia la contraseña, se cerrará sesión automaticamente</string>

    <!--    Fragmento Home-->
    <string name="category">Elige una categoria</string>
    <string name="category_liquors">Licores</string>
    <string name="category_drinks">Bebidas</string>
    <string name="category_candy">Dulceria</string>
    <string name="category_others">Otros</string>

    <!--Otros-->
    <string name="loading">Cargando...</string>
    <string name="success">Exito</string>
    <string name="failed">Advertencia</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_liquors_admin">LiquorsAdminActivity</string>
    <string name="title_activity_drinks_admin">DrinksAdminActivity</string>
    <string name="title_activity_candys_admin">CandysAdminActivity</string>
    <string name="title_activity_others_admin">OthersAdminActivity</string>
    <string name="dos_columnas">Dos Columnas</string>
    <string name="tres_columnas">Tres columnas</string>
    <string name="ordenar">Ordenar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>