<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeAdmin"
            android:icon="@drawable/home_ico"
            android:title="@string/home_admin" />

        <item
            android:id="@+id/registerAdmin"
            android:icon="@drawable/register_ico"
            android:title="@string/register_admin" />

        <item
            android:id="@+id/profile_admin"
            android:icon="@drawable/about_ico"
            android:title="@string/profile_admin_txt" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/exit_ico"
            android:title="@string/exit" />

    </group>

</menu>