<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragmentAdmin.ProfileAdminFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_admin_txt"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/info_txt"
            android:textSize="20sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UID_profile_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UID_profile_txt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/UID_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/UID_profile"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_profile_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_profile_txt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/name_profile"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/last_name_profile_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name_profile_txt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/last_name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/last_name_profile"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email_profile_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_profile_txt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/email_profile"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password_profile_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_profile_txt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/password_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/password_profile"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_password_profile"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_customizable"
            android:drawableStart="@drawable/edit_ico"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/update_password_profile"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_data_profile"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_customizable"
            android:drawableStart="@drawable/edit_ico"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/update_data_profile"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>