<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/ordenar"
        android:text="@string/ordenar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="sort.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dos_columnas"
        android:text="@string/dos_columnas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_customizable"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tres_columnas"
        android:text="@string/tres_columnas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_customizable"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

</androidx.appcompat.widget.LinearLayoutCompat>