<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragmentAdmin.RegisterAdminFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="15dp">

        <!--        Titulo central-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_admin"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--        imagen-->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/register" />

        <!--        Input texts de nombres-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="@string/names"
                android:inputType="textCapWords|textAutoComplete"
                android:textColorHint="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Input Texts de Apellidos-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/lastNameAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="@string/last_name"
                android:inputType="textCapWords|textAutoComplete"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Input text de Correo-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Input texts de contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerBtnAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:padding="15dp"
            android:text="@string/register_btn"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>