<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="290dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="0.2dp"
    app:cardBackgroundColor="#ffff"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

<!--        imagen-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageLiquors"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="center" />

        <TextView
            android:id="@+id/nameImgLiquorsItem"
            android:text="@string/name_img_liquors_item"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="#D6D6D6"
            android:gravity="center"/>

        <TextView
            android:id="@+id/priceLiquorsItem"
            android:text="@string/price_liquors_item"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="#D6D6D6"
            android:gravity="center"/>

        <TextView
            android:id="@+id/descriptionLiquorsItem"
            android:text="@string/description_liquors_item"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="#D6D6D6"
            android:gravity="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>