<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="15dp">

        <!--        Titulo central-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--        imagen-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="login.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            />

        <!--        Input text de Correo-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined">

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Input texts de contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:padding="15dp"
            android:text="@string/login_txt"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>